# librpigrafx2

./: .editorconfig  .gitignore  LICENSE  Makefile.am  README.md  configure.ac  librpigrafx.pc  librpigrafx.pc.in  librpigrafx2.pc.in  prepare_rawcam.sh
include/: Makefile.am  local.h  rpigrafx.h  rpigrafx2.h
src/: Makefile.am  dispmanx.c  local.c  main.c  mmal.c
test/: Makefile.am  test_capture_and_render_once.c  test_capture_edit_render_seq.c  test_capture_render_seq.c  test_dispmanx.c  test_preview_render_seq.c  test_rawcam_imx219.c
